An ability to insert options list from the clipboard

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,6 @@ dependencies {
     implementation libs.room_rx
 
     implementation libs.graphs
-
     implementation libs.timber
+    implementation libs.fab_menu
 }
