--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.1.3'
     }
 }
 
@@ -32,6 +32,7 @@ ext {
             room_version                     : "1.0.0",
             mp_android_chart_version         : "v3.0.3",
             timber_version                   : "4.7.0",
+            fab_menu_version                 : "1.6.4",
     ]
     libs = [
             support_appcompat        : "com.android.support:appcompat-v7:${versions.support_lib_version}",
@@ -50,6 +51,8 @@ ext {
             room_rx                  : "android.arch.persistence.room:rxjava2:${versions.room_version}",
             graphs                   : "com.github.PhilJay:MPAndroidChart:${versions.mp_android_chart_version}",
             timber                   : "com.jakewharton.timber:timber:${versions.timber_version}",
+            fab_menu                 : "com.github.clans:fab:${versions.fab_menu_version}",
     ]
 }
+
 
