--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 buildscript {
+    ext.kotlin_version = '1.2.51'
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -25,6 +27,7 @@ ext {
     versions = [
             support_lib_version              : "27.1.0",
             support_constraint_layout_version: "1.1.0-beta5",
+            ktx_version                      : "1.0.0-alpha1",
             butterknife_version              : "8.8.1",
             dagger_version                   : "2.12",
             rx_java_version                  : "2.1.3",
@@ -35,6 +38,8 @@ ext {
             fab_menu_version                 : "1.6.4",
     ]
     libs = [
+            kotlin                   : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+            ktx                      : "androidx.core:core-ktx:${versions.ktx_version}",
             support_appcompat        : "com.android.support:appcompat-v7:${versions.support_lib_version}",
             support_constraint_layout: "com.android.support.constraint:constraint-layout:${versions.support_constraint_layout_version}",
             support_design           : "com.android.support:design:${versions.support_lib_version}",
